--- a/index.html
+++ b/index.html
@@ -8,22 +8,28 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
 
         <!-- FAVICON -->
-        <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicon/apple-touch-icon.png">
-        <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon/favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon/favicon-16x16.png">
-        <link rel="manifest" href="/assets/favicon/site.webmanifest">
-        <link rel="mask-icon" href="/assets/favicon/safari-pinned-tab.svg" color="#000000">
-        <link rel="shortcut icon" href="/assets/favicon/favicon.ico">
-        <meta name="msapplication-TileColor" content="#000000">
-        <meta name="msapplication-config" content="/assets/favicon/browserconfig.xml">
-        <meta name="theme-color" content="#000000">
+        <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicon/apple-touch-icon.png" />
+        <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon/favicon-32x32.png" />
+        <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon/favicon-16x16.png" />
+        <link rel="manifest" href="/assets/favicon/site.webmanifest" />
+        <link rel="mask-icon" href="/assets/favicon/safari-pinned-tab.svg" color="#000000" />
+        <link rel="shortcut icon" href="/assets/favicon/favicon.ico" />
+        <meta name="msapplication-TileColor" content="#000000" />
+        <meta name="msapplication-config" content="/assets/favicon/browserconfig.xml" />
+        <meta name="theme-color" content="#000000" />
 
         <!-- SEO -->
         <title>Francesco Bonizzi</title>
-        <meta name="description" content="FBONIZZI-DESCRIPTION" />
+        <meta
+            name="description"
+            content="Sono Francesco Bonizzi e sono appassionato di tante cose. Ecco il mio sito personale!"
+        />
         <meta property="og:type" content="website" />
         <meta property="og:title" content="Francesco Bonizzi" />
-        <meta property="og:description" content="FBONIZZI-DESCRIPTION" />
+        <meta
+            property="og:description"
+            content="Sono Francesco Bonizzi e sono appassionato di tante cose. Ecco il mio sito personale!"
+        />
         <meta property="og:site_name" content="Francesco Bonizzi" />
         <meta property="og:locale" content="it_IT" />
         <meta property="og:image" content="https://fbonizzi.it/assets/images/francesco-bonizzi.png" />
@@ -40,6 +46,45 @@
 
         <!-- STYLESHEETS -->
         <link href="./assets/css/style.css" rel="stylesheet" />
+
+        <!-- STRUCTURED DATA -->
+        <script type="application/ld+json">
+            {
+                "@context": "https://schema.org",
+                "@type": "Person",
+                "email": "f.bonizzi@imaginesoftware.it",
+                "image": "https://www.imaginesoftware.it/assets/images/other/Francesco-Bonizzi.jpg?v=fOPBpMMe77Shbleug4lEd621sKyZkXYSSeUw60QXu5A",
+                "jobTitle": "Full stack .NET developer and App developer",
+                "name": "Francesco Bonizzi",
+                "gender": "Male",
+                "nationality": "Italian",
+                "birthDate": "1990-08-05",
+                "sameAs": [
+                    "https://github.com/FrancescoBonizzi",
+                    "https://www.linkedin.com/in/fbonizzi/",
+                    "https://stackoverflow.com/users/1090403/francesco-bonizzi"
+                ],
+                "worksFor": [
+                    {
+                        "@type": "Organization",
+                        "name": "Imagine Software",
+                        "legalName": "Imagine Software di Bonizzi Francesco",
+                        "url": "https://www.imaginesoftware.it",
+                        "logo": "https://www.imaginesoftware.it/images/assets/logos/logo-imagine-software.jpg?v=IZ-cRR2fLms0GurmGkxsLFjfoPJsUcwwoevs-TsCoF8",
+                        "vatID": "02982280345",
+                        "location": "Italy",
+                        "sameAs": ["https://www.imaginesoftware.it"],
+                        "foundingDate": "2021",
+                        "founders": [{ "@type": "Person", "name": "Francesco Bonizzi" }],
+                        "contactPoint": {
+                            "@type": "ContactPoint",
+                            "contactType": "customer support",
+                            "email": "f.bonizzi@imaginesoftware.it"
+                        }
+                    }
+                ]
+            }
+        </script>
     </head>
 
     <body>
