Some nice fixes

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         />
         <meta property="og:site_name" content="Francesco Bonizzi" />
         <meta property="og:locale" content="it_IT" />
-        <meta property="og:image" content="https://fbonizzi.it/assets/images/francesco-bonizzi.png" />
+        <meta property="og:image" content="https://fbonizzi.it/assets/images/francesco-bonizzi.jpeg" />
         <meta property="og:url" content="https://notizieterraterra.it" />
 
         <meta name="author" content="Francesco Bonizzi" />
@@ -92,10 +92,10 @@
             <div class="items-in-row">
                 <div>
                     <h1>Francesco Bonizzi</h1>
-                    <p>Sono appassionato di tante cose</p>
+                    <p>Sono appassionato di tante cose 🥸</p>
                 </div>
                 <img
-                    class="margin-left-20"
+                    class="margin-left-20 border-radius-15"
                     src="./assets/images/francesco-bonizzi.jpeg"
                     alt="Una foto di Francesco Bonizzi"
                 />
