Better projects order

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         </header>
 
         <main>
-            {% for project in site.projects %}
+            {% for project in site.projects reversed %}
 
             <section>
                 <h4>{{ project.title }}</h4>
