Changed the personal picture to Github avatar

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <meta property="og:description" content="{{ site.description }}" />
         <meta property="og:site_name" content="{{ site.title }}" />
         <meta property="og:locale" content="it_IT" />
-        <meta property="og:image" content="{{ site.url }}/assets/images/francesco-bonizzi.jpeg" />
+        <meta property="og:image" content="https://avatars.githubusercontent.com/u/11348479" />
         <meta property="og:url" content="{{ site.url }}" />
 
         <meta name="author" content="Francesco Bonizzi" />
@@ -93,7 +93,7 @@
                 </div>
                 <img
                     class="margin-left-20 border-radius-15"
-                    src="./assets/images/francesco-bonizzi.jpeg"
+                    src="https://avatars.githubusercontent.com/u/11348479"
                     alt="Una foto di Francesco Bonizzi"
                 />
             </div>
